# big-book-api-clients

./: README.md  big-book-api-openapi-3.json  build.ps1  java-config.json
.github/workflows/: postman-collection.yml
android/: README.md  build.gradle  pom.xml
android/.openapi-generator/: FILES
android/docs/: DefaultApi.md
angular/: git_push.sh
angular/.openapi-generator/: FILES
angular/api/: default.service.ts
clojure/: git_push.sh  project.clj
cpp/: README.md
csharp/: README.md  appveyor.yml  bigbookapi.sln  git_push.sh
dart/: README.md  git_push.sh
elixir/: README.md  mix.exs
elm/: README.md
erlang/: rebar.config
go/: README.md  api_default.go  client.go  configuration.go  git_push.sh  go.mod  response.go  utils.go
groovy/: README.md  build.gradle
haskell/: README.md  big-book.cabal  git_push.sh  openapi.yaml
java/: README.md  build.gradle  build.sbt  git_push.sh  pom.xml
javascript/: README.md  git_push.sh  package.json
kotlin/: README.md  build.gradle
lua/: bigbookapi-1.0.1.rockspec  git_push.sh  openapiclient-1.0.0-1.rockspec
objc/: OpenAPIClient.podspec  README.md  git_push.sh
perl/: README.md  git_push.sh
php/: README.md  composer.json  git_push.sh  phpunit.xml.dist
python/: .gitlab-ci.yml  .travis.yml  README.md  git_push.sh  pyproject.toml  setup.py  tox.ini
ruby/: README.md  git_push.sh  openapi_client.gemspec
rust/: Cargo.toml  README.md  git_push.sh
rust/docs/: DefaultApi.md
rust/src/apis/: configuration.rs  default_api.rs
typescript/: DefaultApi.md  git_push.sh  package.json  servers.ts
(+252 files in other folders)
